# fell_finder

./: .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  api_testing.py  bad_files.txt  ingestion.py  main.py  notes.md  notes.txt  pre_commit.sh  pyproject.toml  pytest.ini  requirements.txt  sandbox.py  setup.py  vulture_allowlist.py  webapp.py
analysis/: api_testing.py  delta_testing.py  main.rs  main.rs.profiling  missing_ways.py  profiling.sh  tuning.csv  tuning.py  tuning_charts.py  tuning_main.csv
app/: app.py  index.py
app/components/: route_plots.py
app/layout/: navbar.py  route_maker.py
docker/: README.md  fell_finder.dockerfile  fell_finder_compose.yaml  fell_loader.dockerfile  fell_loader_compose.yaml  fell_viewer.dockerfile  fell_viewer.sh
docs/: changelog.md  roadmap.md  setup.fell_finder.md  setup.fell_loader.md  setup.md  usage.md  usage.route_creation.md
docs/source/: changelog.rst  components.fell_finder.rst  components.fell_loader.rst  components.fell_viewer.rst  components.rst  conf.py  index.rst  roadmap.rst  setup.fell_finder.rst  setup.fell_loader.rst  setup.rst  usage.route_creation.rst  usage.rst
src/fell_finder/: __init__.py  config.yml
src/fell_finder/app/: app.py  index.py
src/fell_finder/app/components/: __init__.py  footer.py  navbar.py  url_bar.py
src/fell_finder/app/content/: __init__.py
src/fell_finder/app/content/route_finder/: callbacks.py  components.py  generators.py  layout.py
src/fell_finder/app/utils/: caching.py  element_generators.py  plotting.py
src/fell_finder/containers/: config.py  geo.py  geometry.py  graph_data.py  routes.py
src/fell_finder/contraction/: __init__.py  graph_contractor.py
src/fell_finder/enrichment/: __init__.py  graph_enricher.py
src/fell_finder/ingestion/: __init__.py
src/fell_finder/ingestion/enriching/: edge_mixin.py  graph_enricher.py  node_mixin.py
src/fell_finder/ingestion/lidar/: discovery.py  parsing.py
src/fell_finder/ingestion/optimising/: graph_contractor.py
src/fell_finder/ingestion/osm/: exploration.ipynb  parsing.py  parsing_old.py  pyrosm.ipynb
src/fell_finder/ingestion/parsing/: lidar_loader.py  osm_loader.py
src/fell_finder/plotting/: __init__.py  plotting.py
src/fell_finder/retrieval/: graph_fetcher.py
src/fell_finder/routing/: __init__.py  containers.py  route_maker.py  route_pruner.py  route_selector.py  zimmer.py
src/fell_finder/selection/: __init__.py  condenser.py  selector.py
src/fell_finder/utils/: config.py  gt_graphs.py  partitioning.py
src/fell_finder_app/: ingestion.py  utils.py  webapp.py
tests/: __init__.py  conftest.py
tests/containers/: __init__.py  test_config.py  test_geometry.py  test_graph_data.py  test_routes.py
tests/enrichment/: test_graph_enricher.py
tests/ingestion/: __init__.py
tests/ingestion/enriching/: test_edge_mixin.py  test_graph_enricher.py  test_node_mixin.py
tests/ingestion/lidar/: test_discovery.py  test_parsing.py
tests/ingestion/optimising/: test_graph_contractor.py
tests/ingestion/osm/: test_parsing.py
tests/ingestion/parsing/: __init__.py  test_lidar_loader.py  test_osm_loader.py
tests/retrieval/: gen_graph_fetcher_data.py  test_graph_fetcher.py
tests/retrieval/data/optimised/nodes/easting_ptn=104/northing_ptn=34/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=104/northing_ptn=35/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=104/northing_ptn=36/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=104/northing_ptn=37/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=104/northing_ptn=38/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=105/northing_ptn=34/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=105/northing_ptn=35/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=105/northing_ptn=36/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=105/northing_ptn=37/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=105/northing_ptn=38/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=106/northing_ptn=34/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=106/northing_ptn=35/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=106/northing_ptn=36/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=106/northing_ptn=37/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=106/northing_ptn=38/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=107/northing_ptn=34/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=107/northing_ptn=35/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=107/northing_ptn=36/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=107/northing_ptn=37/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=107/northing_ptn=38/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=108/northing_ptn=34/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=108/northing_ptn=35/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/retrieval/data/optimised/nodes/easting_ptn=108/northing_ptn=36/: 7d3cdc9497554549bf0f81c73a8acc5a-0.parquet
tests/utils/: test_partitioning.py
(+2 files in other folders)
