[project]
name = "fell-finder-app"
version = "0.1.0"
description = "A personal project which aims to help you find the hilliest possible routes in your local area (so long as you're UK based)."
authors = [{ name = "Ross Piper", email = "rp-webservices@outlook.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fell-viewer",
    "fell-loader",
    "hatchling>=1.27.0",
]

[tool.pytest.ini_options]
testpaths = ["packages/fell_loader/tests", "packages/fell_viewer/tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "D1", "D41", "ANN001", "ANN2", "ERA"]
ignore = ["D107", "D415"]

[tool.ruff.lint.per-file-ignores]
"./tests/*" = ["E501", "ANN201"]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# [tool.uv]
# concurrent-downloads = 1
# concurrent-builds = 1
# concurrent-installs = 1

[tool.uv.sources]
fell-loader = { workspace = true }
fell-viewer = { workspace = true }

[tool.uv.workspace]
members = ["packages/fell_viewer", "packages/fell_loader"]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.4",
    "vulture>=2.14",
]

[tool.setuptools.packages.find]
where = ["packages"]
include = ["fell_loader", "fell_viewer"]

[tool.vulture]
paths = [
    "packages/fell_loader/src",
    "packages/fell_viewer/src",
    "webapp.py",
    "ingestion.py",
]
