[project]
name = "fell-finder-app"
version = "0.1.0"
description = "A personal project which aims to help you find the hilliest possible routes in your local area (so long as you're UK based)."
authors = [{ name = "Ross Piper", email = "rp-webservices@outlook.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fell-viewer",
    "fell-loader",
    "pandas<3.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.4",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["packages/fell_loader/tests", "packages/fell_viewer/tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 79
include = [
    "src/fell_finder_app/**/*.py",
    "packages/fell_loader/**/*.py",
    "packages/fell_viewer/**/*.py",
]
exclude = ["vulture_allowlist.py"]

[tool.ruff.lint]
select = [
    "A",    # shadowed builtins
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # import sorting
    "C4",   # flake8 comprehensions
    "UP",   # deprecations / upgrades
    "PL",   # pylint
    "TC",   # flake8 type checking
    "TD",   # flake8 todos
    "ISC",  # implicit string concatenation
    "ICN",  # flake8 import conventions
    "RET",  # flake8 return
    "SIM",  # flake8 simplify
    "TID",  # flake8 tidy imports
    "ERA",  # commented out code
    "ANN",  # annotations
    "RUF",  # ruff specific
    "ARG",  # flake8 unused arguments
    "PERF", # performance
    "DOC",  # pydoclint
]
ignore = ["D107", "D205", "D415", "TD002", "TD003", "C408", "RET504", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["E501", "ANN201", "RUF012"]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
fell-loader = { workspace = true }
fell-viewer = { workspace = true }

[tool.uv.workspace]
members = ["packages/fell_viewer", "packages/fell_loader"]
